<resources>
    <string name="app_name"> Indoplast</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"> Indoplast</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_qr">QR Scan - Details</string>
    <string name="menu_loading">Loading</string>
    <string name="menu_unloading">Unloading</string>
    <string name="menu_repair">Repair</string>
    <string name="menu_log">Exceed Log</string>
    <string name="menu_logout">Logout</string>


</resources>
